--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ guppy = "0.1.4"   # to analyze dependencies
 geiger = "0.4.3"  # to calculate number of unsafe lines of code
 loc = "0.5.0"     # to calculate number of lines of code
 
+regex = "1.3.4"   # used to match a repository link with a github repo
+reqwest = { version = "0.10.2", features = ["blocking", "json"] } # github queries
+
 serde = "1.0"      # to print the result as JSON
 serde_json = "1.0" # to print the result as JSON
 askama = "0.8"     # to print the result as HTML
