--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,16 +7,23 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ignore = "0.4.11" # to walk through files of a directory
-guppy = "0.1.4"   # to analyze dependencies
+ignore = "0.4.12" # to walk through files of a directory
+guppy = "0.1.6"   # to analyze dependencies
 geiger = "0.4.3"  # to calculate number of unsafe lines of code
 loc = "0.5.0"     # to calculate number of lines of code
+regex = "1.3.5"   # used to match a repository link with a github repo
+reqwest = { version = "0.10.4", features = ["blocking", "json"] } # github queries
 
-regex = "1.3.4"   # used to match a repository link with a github repo
-reqwest = { version = "0.10.2", features = ["blocking", "json"] } # github queries
+# CLI stuff
+clap = "2.33.0" 
 
-serde = "1.0"      # to print the result as JSON
+# webpage
+rocket = "0.4.4"
 serde_json = "1.0" # to print the result as JSON
-askama = "0.8"     # to print the result as HTML
+askama = "0.9.0"     # to print the result as HTML
+serde = { version = "1.0", features = ["derive"] }
 
-clap = "2.33.0" # CLI 
+[dependencies.rocket_contrib]
+version = "0.4.4"
+default-features = false
+features = ["json"]
