--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ keywords = ["dependencies", "unsafe", "security", "loc", "cargo", "plugin"]
 repository = "https://github.com/mimoo/cargo-dephell"
 
 [dependencies]
+tempdir = "0.3.7" # to build the main crate
 ignore = "0.4.12" # to walk through files of a directory
 guppy = "0.1.6"   # to analyze dependencies
 cargo = "0.43.1"  # to get rust files in a crate
@@ -16,6 +17,7 @@ geiger = "0.4.3"  # to calculate number of unsafe lines of code
 loc = "0.5.0"     # to calculate number of lines of code
 regex = "1.3.5"   # used to match a repository link with a github repo
 reqwest = { version = "0.10.4", features = ["blocking", "json"] } # github queries
+
 
 # CLI stuff
 clap = "2.33.0" 
