fix README for crates.io

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,9 @@ name = "cargo-dephell"
 version = "0.1.0"
 authors = ["David Wong <davidwg@calibra.com>"]
 edition = "2018"
-categories = ["command-line-utilities", "development-tools", "development-tools::cargo-plugins", "dependencies"]
+categories = ["command-line-utilities", "development-tools::cargo-plugins"]
 description = "Analyzes a project's third-party dependencies."
-keywords = ["dependencies", "unsafe", "security", "loc", "cargo", "plugin"]
+keywords = ["dependencies", "security"]
 repository = "https://github.com/mimoo/cargo-dephell"
 readme = "README.md"
 license = "MIT OR Apache-2.0"
