--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,4 +29,4 @@ clap = "2.33.0"
 serde_json = "1.0" # to print the result as JSON
 askama = "0.9.0"     # to print the result as HTML
 serde = { version = "1.0", features = ["derive"] }
-
+base64 = "0.12.0" # to encode JSON on page
