--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,20 +12,20 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 tempdir = "0.3.7" # to build the main crate
-glob = "0.3.0"
+glob = "0.3.0"    # used to find dep-info files
 ignore = "0.4.12" # to walk through files of a directory
 guppy = "0.1.6"   # to analyze dependencies
 cargo = "0.43.1"  # to get rust files in a crate
 geiger = "0.4.3"  # to calculate number of unsafe lines of code
 loc = "0.5.0"     # to calculate number of lines of code
+chrono = "0.4.11" # used to parse date from crates.io
 regex = "1.3.5"   # used to match a repository link with a github repo
 reqwest = { version = "0.10.4", features = ["blocking", "json"] } # github queries
-
 
 # CLI stuff
 clap = "2.33.0" 
 
-# HTML
+# HTML output stuff
 serde_json = "1.0" # to print the result as JSON
 askama = "0.9.0"     # to print the result as HTML
 serde = { version = "1.0", features = ["derive"] }
