--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["David Wong <davidwong.crypto@gmail.com>"]
 edition = "2018"
 categories = ["command-line-utilities", "development-tools::cargo-plugins"]
 description = "Analyzes a project's third-party dependencies."
-keywords = ["dependencies", "security"]
+keywords = ["cargo", "dependencies", "security"]
 repository = "https://github.com/mimoo/cargo-dephell"
 readme = "README.md"
 license = "MIT OR Apache-2.0"
@@ -23,7 +23,7 @@ regex = "1.3.5"   # used to match a repository link with a github repo
 reqwest = { version = "0.10.4", features = ["blocking", "json"] } # github queries
 
 # CLI stuff
-clap = "2.33.0" 
+clap = { version = "2.33.0", features = [ "suggestions", "color"] }
 
 # HTML output stuff
 serde_json = "1.0" # to print the result as JSON
