--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,20 +13,20 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 tempdir = "0.3.7" # to build the main crate
 glob = "0.3.0"    # used to find dep-info files
-ignore = "0.4.14" # to walk through files of a directory
-guppy = "0.3.1"   # to analyze dependencies
-cargo = "0.44.0"  # to get rust files in a crate
-geiger = "0.4.4"  # to calculate number of unsafe lines of code
+ignore = "0.4.15" # to walk through files of a directory
+guppy = "0.4.1"   # to analyze dependencies
+cargo = "0.44.1"  # to get rust files in a crate
 loc = "0.5.0"     # to calculate number of lines of code
 chrono = "0.4.11" # used to parse date from crates.io
 regex = "1.3.7"   # used to match a repository link with a github repo
+cargo_metadata = "0.10.0" # to parse the output of cargo check
 reqwest = { version = "0.10.4", features = ["blocking", "json"] } # github queries
 
 # CLI stuff
-clap = { version = "2.33.0", features = [ "suggestions", "color"] }
+clap = { version = "2.33.1", features = [ "suggestions", "color"] }
 
 # HTML output stuff
 serde_json = "1.0" # to print the result as JSON
 askama = "0.9.0"     # to print the result as HTML
 serde = { version = "1.0", features = ["derive"] }
-base64 = "0.12.0" # to encode JSON on page
+base64 = "0.12.1" # to encode JSON on page
