--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cargo-dephell"
-version = "0.5.1"
+version = "0.5.2-alpha.0"
 authors = ["David Wong <davidwong.crypto@gmail.com>"]
 edition = "2018"
 categories = ["command-line-utilities", "development-tools::cargo-plugins"]
